adjusted card min width to address wrapping issue

--- a/blog/static/css/styles.css
+++ b/blog/static/css/styles.css
@@ -107,12 +107,11 @@ h1 {
 
 .thumbnail-image {
     max-width: 250px;
-    margin: auto;
 }
 
 .card {
+    min-width: 140px;
     max-height: 375px;
-    min-width: 175px;
     overflow: hidden;
     opacity: 45%;
     transition: opacity 0.3s ease-in-out;
